unpackaged/main/default/objects/CustomObject3__c/CustomObject3__c.object-meta.xml
<CustomObject>
    <label>CustomObject3</label>
    <nameField>
        <label>CustomObject3 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomObject3s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>