unpackaged/main/default/objects/CustomObject3__c/fields/MyLocation__c.field-meta.xml
<CustomField>
    <fullName>MyLocation__c</fullName>
    <label>MyLocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>