unpackaged/main/default/objects/CustomObject3__c/fields/PicklistTest__c.field-meta.xml
<CustomField>
    <fullName>PicklistTest__c</fullName>
    <label>PicklistTest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apples</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>