unpackaged/main/default/objects/CustomObject3__c/fields/XmlQuotesTest__c.field-meta.xml
<CustomField>
    <fullName>XmlQuotesTest__c</fullName>
    <description>Just &quot;testing&quot; some &lt;&gt;; random &amp; characters &#39; &#39;</description>
    <inlineHelpText>Just &quot;testing&quot; some &lt;&gt;; random &amp; characters &#39; &#39;</inlineHelpText>
    <label>XmlQuotesTest</label>
    <length>20</length>
    <type>Text</type>
</CustomField>